hard-gists/2438871/run.log
=== Docker Run Log for 2438871 ===
Started at: Mi 29. Okt 13:05:13 CET 2025

[2025-10-29 13:05:13] START: Running container for 2438871
[2025-10-29 13:05:13] SUCCESS: Container 4fc85d96acdbad168fe8cae3e658098b291e25611052f698be49515faace8595 started for 2438871
=== Container logs for 2438871 ===
  File "/snippet.py", line 10
    print __doc__
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2438871 ===
[2025-10-29 13:05:15] INFO: Container 4fc85d96acdbad168fe8cae3e658098b291e25611052f698be49515faace8595 has stopped
